--- a/vintage-store/pom.xml
+++ b/vintage-store/pom.xml
@@ -101,6 +101,12 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.agoncal.course.quarkus.orm</groupId>
+            <artifactId>customer</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
