--- a/artist/pom.xml
+++ b/artist/pom.xml
@@ -45,6 +45,10 @@
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
